--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ FGA.branch = '/master/';
 
 // When running in dev folder
 // = location.href.includes( FGA.repo ) ? '../' : 'https://' + FGA.repo + "/";
-FGA.urlGitHubPage = `https://${ FGA.repo }/`;
+//FGA.urlGitHubPage = `https://${ FGA.repo }/`;
 // When running in build repo
-//FGA.urlGitHubPage = "";
+FGA.urlGitHubPage = "";
 
 </script>
 
