update basic html

--- a/tootoo-more2/basic-html-hamburger.html
+++ b/tootoo-more2/basic-html-hamburger.html
@@ -59,7 +59,7 @@
 
 	</nav>
 
-	
+
 	<div>
 
 		<button id="butHamburger" onclick=MNU.toggleNavLeft(); title="click here to hide this menu"> slide ☰ </button>
@@ -77,7 +77,7 @@
 <script>
 
 const urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
-const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
+const urlSourceCodeIcon = "https://pushme-pullyou.github.io/github-mark-64.png";
 
 const MNU = {};
 
