--- a/tootoo-more2/basic-html.html
+++ b/tootoo-more2/basic-html.html
@@ -5,11 +5,19 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "Basic TooToo HTML template" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-03-02" >
-<title></title>
+<meta name = "date" content = "2019-05-25" >
+<meta name = "version" content = "0.0.0" >
+<title>basic-html</title>
 <style>
 
-	body { font: 12pt monospace; margin: 0 auto; max-width: 800px; }
+	* { box-sizing: border-box; }
+
+	:root { --mnu-width: 22rem; --screen-width: calc( 100vw ); --headerHeight: 6rem; }
+
+	html { height: 100%; }
+
+	body { font: 12pt monospace; margin: 0 auto; max-width: 800px; padding: 0 0.5rem; }
+
 	a { color: crimson; text-decoration: none; }
 	a:hover, a:focus, a:active { background-color: yellow; color: #aaa; text-decoration: underline }
 
@@ -17,7 +25,11 @@
 	button:hover { background: #ccc; color: #fff }
 
 	/*
-	#navMenu { background-color: #eee; left: 0; margin: 20px; max-width: 300px; padding: 0 10px; position: absolute; top: 0; }
+	main { border: 0px; height: 100%; left: var( --mnu-width ); margin: 0;
+		padding: 0 1rem; position: absolute; width: calc( 100% - var( --mnu-width ) );  }
+
+	#navMenu { background-color: #eee; left: 0; margin: 0; padding: 0 1rem;
+		position: absolute; top: 0; width: var( --mnu-width ); }
 	*/
 
 </style>
@@ -29,7 +41,7 @@
 		<div id="divTitle" ></div>
 
 		<p>
-			<button id=but onclick=setIt(); accessKey= 'z' title='access key: z '>button button</button>
+			<button id=but onclick=setIt(); accessKey= 'z' title='access key: z '>buttonbutton</button>
 		</p>
 
 	</nav>
@@ -69,6 +81,7 @@ function setIt() {
 function getTitle() {
 
 	document.title = document.title ? document.title : location.href.split( '/' ).pop().slice( 0, - 5 ).replace( /-/g, ' ' );
+	const version = document.head.querySelector( "[ name=version ]" ).content;
 
 	const htm =
 	`
@@ -76,7 +89,7 @@ function getTitle() {
 			<a href=${ urlSourceCode } target=_top title="Source code on GitHub" >
 				<img src=${ urlSourceCodeIcon } height=18 style=opacity:0.5; >
 			</a>
-			<a href="" title="Click to reload this page" >${ document.title }</a>
+			<a href="" title="Click to reload this page" >${ document.title } ${ version }</a>
 		</h2>
 
 		<p>
