--- a/index.html
+++ b/index.html
@@ -1,193 +1,163 @@
 <!doctype html>
 <html lang = "en" >
 <head>
-<meta charset = "utf-8" >
-<meta name = "viewport" content= "width=device-width, initial-scale=1" >
+
+<meta charset = "utf-8">
+<meta name = "copyright" content ="PushMe-PullYou authors" >
+<meta name = "date" content = "2019-06-08" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-04-14" >
-<meta name = "release" content = "13-3-0" >
+<meta name = "version" content = "0.14.1-5" >
+<meta name = "viewport" content = "width=device-width, initial-scale=1" >
+
 <title>pushMe-pullYou</title>
-<link rel="stylesheet" href="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/style.css">
+
+<link rel = "canonical" href = "https://pushme-pullyou.github.io" />
+<link rel = "license" href = "https://creativecommons.org/licenses/by/4.0/">
+<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Inconsolata"  >
+<link rel = "stylesheet" href = "https://pushme-pullyou.github.io/tootoo14/js-14-1/style.css" >
+
 </head>
+
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/mnu-menu.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/sfm-selected-files-markdown.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/fga-files-github-api/fga-files-github-api.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/gat-github-access-token.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/fob-file-open-basic/fob-file-open-basic.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/thm-theme-select.js" ></script>
-<script src="https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/tmp-template.js" ></script>
+
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js" ></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" ></script>
+
+<!-- menus generally -->
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/mnu-menu/mnu-menu.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/gat-github-access-token/gat-github-access-token.js" ></script>
+
+<!-- File menu panel -->
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/fga-files-github-api/fga-files-github-api.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/fob-file-open-basic/fob-file-open-basic.js" ></script>
+
+<!-- Edit Menu -->
+
+<!-- Settings menu -->
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/thm-theme/thm-theme.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/tmp-template/tmp-template.js" ></script>
+
+	<button id="expandButton" onclick="toggleNavPanel();" >☰</button>
+
+	<nav id="navPanel" >
+
+		<section class="secContent" >
+
+			<header>
+
+				<div id="MNUdivHeader" ></div>
+
+			</header>
+
+
+			<details open >
+
+				<summary class="sumMenuTitle" >File menu</summary>
+
+				<p>See also <a href="https://pushme-pullyou.github.io/tootoo14" >tooToo14</a></p>
+
+				<div id=SFMsecPrototypes ></div>
+
+				<div id="FGAdivMenuRepoFilesFolders" ></div>
+
+				<div id="GATdivGithubAccessToken" ></div>
+
+				<div id=FOBdivFileOpenBasic ></div>
+
+				<div id=FOBdivFileSaveBasic ></div>
+
+			</details>
+
+
+			<details>
+
+				<summary class=sumMenuTitle >Settings menu</summary>
+
+				<div id=THMdivMenuThemeSelect ></div>
+
+				<div id=TMPdivTemplate ></div>
+
+			</details>
+
+
+			<footer>
+
+				<div id="MNUdivFooter" ></div>
+
+				<div id="MNUdivFooterPopup" ></div>
+
+				<h1 onclick="navPanel.scrollTop=0;" style="cursor:pointer;text-align:center;" title="go to top of menu" >
+					❦
+				</h1>
+
+			</footer>
+
+		</section>
+
+	</nav>
+
+
+	<main id=main >
+
+		<div id=divContents ></div>
+
+	</main>
+
+
+	<nav id="navPopup" hidden >
+
+		<section class="secContent" >
+
+			<div id="MNUdivPopup" ></div>
+
+		</section>
+
+	</nav>
+
+
+	<nav>
+
+		<a href="" id="aViewSource" target="_blank"; hidden >view source</a>
+
+	</nav>
+
 
 <script>
 
-//Copyright 2019 pushMe-pullYou authors. MIT License
+THM.themeUrlStorage = 'pushMePullYouThemeUrl'; // set for each instance in HTML file
+THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-1/style.css";
 
-MNU.description =
-	`
-		Very simple JavaScript files to help you explore and build new tools on <a href="https://github.com" target="_blank">GitHub</a>.
-			<!--
-			Code names are a riff on the <a href="https://en.wikipedia.org/wiki/Doctor_Dolittle" target="_blank">Dr Dolittle</a> naming style
-			-->
-	`;
-
-MNU.currentStatusCore =
-	`
-		<h3>
-			pushMe-pullYou
-			R${ document.head.querySelector( '[ name=release ]' ).content }
-			~
-			${ document.head.querySelector( '[ name=date ]' ).content }
-		</h3>
-
-		<p>${ MNU.description }</p>
-
-		<details>
-
-			<summary>Change log</summary>
-
-			<ul>
-				<li>2019-01-17 ~ Add many TooToo fixes</li>
-				<li>2019-01-09 ~ Index/html now based on TooToo R13 - beginning to look OK</li>
-			</ul>
-
-		</details>
-
-		<details>
-
-			<summary>TooToo Content Manager</summary>
-
-			<p>This web page is built with:</p>
-
-			${ MNU.descriptionTooToo }
-
-		</details>
-	`;
+//FOB.urlDefaultFile = "README.md";
 
 
-
-
-//const uriDefaultFile = 'README.md';
-FOB.urlDefaultFile = 'README.md';
-
-THM.themeUrlStorage = 'tootoo13-3-0ThemeUrl';
-THM.cssBasic = "https://pushme-pullyou.github.io/tootoo13/js-tootoo13-3-0/style.css";
-
-// For main menu header
-MNU.urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/";
-
-MNU.homeText = ""; // "pushMe-pullYou";
-MNU.homeTitle = ""; "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-MNU.homeUrl = ""; "https://pushme-pullyou.github.io";
-
-MNU.repoText = ""; "TooToo13";
-MNU.repoTitle = ""; //"Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-MNU.repoUrl = ""; // "https://pushme-pullyou.github.io/tootoo13";
-
-MNU.appText = "";// "CMS";
-MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
-
-//MNU.urlSourceCodeImage = "https://pushme-pullyou.github.io/github-mark-64.png";
-//MNU.urlSourceCodeIcon = `<img src="${ MNU.urlSourceCodeImage }" height=18 style=opacity:0.5 >`;
-
-MNU.footerUrl = "#../../";
-MNU.footerTarget = ""; //"target=_blank";
-MNU.footerIssues = "https://github.com/pushme-pullyou/tootoo13/issues";
-
-// for parsing
+FGA.branch = '/master/';
 FGA.user = 'pushme-pullyou';
 FGA.repo = 'pushme-pullyou.github.io';
 FGA.pathRepo = '';
-FGA.branch = '/master/';
+FGA.urlGitHubPage = "../../";
+FGA.urlGitHubPage = "https://pushme-pullyou.github.io/";
 
-// When running in dev folder
-// = location.href.includes( FGA.repo ) ? '../' : 'https://' + FGA.repo + "/";
-//FGA.urlGitHubPage = `https://${ FGA.repo }/`;
-// When running in build repo
-FGA.urlGitHubPage = "";
+// For main menu header
+MNU.description = `Very simple JavaScript files to help you explore and build new tools on <a href="https://github.com" target="_blank">GitHub</a>.`;
 
-</script>
+MNU.urlSourceCode = "https://github.com/pushme-pullyou/";
 
+MNU.homeText  = ""; //"pushMe-pullYou";
+MNU.homeTitle = ""; //"Very simple JavaScript files to help you explore and build new tools on GitHub.";
+MNU.homeUrl   = ""; //"https://pushme-pullyou.github.io";
 
-	<nav id="navMenu" >
+MNU.repoText  = ""; //"TooToo14";
+MNU.repoTitle = ""; //"Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
+MNU.repoUrl   = ""; //"https://pushme-pullyou.github.io/tootoo14";
 
-		<header>
+MNU.appText  = ""; // "CMS";
+MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
+MNU.appUrl   = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
 
-			<div id="MNUdivHeader" ></div>
-
-		</header>
-
-		<details class=navSubMenu open >
-
-			<summary class=sumMenuTitle >File Menu</summary>
-
-			<section id=SFMsecPrototypes ></section>
-
-			<section id="FGAsecMenuRepoFilesFolders" ></section>
-
-			<section id="GATsecGithubAccessToken" ></section>
-
-			<section id=FOBsecFileOpenBasic ></section>
-
-			<section id=FILdivFileSave ></section>
-
-		</details>
-
-
-		<details class=navSubMenu open >
-
-			<summary class=sumMenuTitle >Settings</summary>
-
-			<section id=THMsecMenuThemeSelect ></section>
-
-			<section id=TMPsecMenuTemplate ></section>
-
-		</details>
-
-
-		<footer class=navSubMenu >
-
-			<section id="MNUdivFooter" ></section>
-
-		</footer>
-
-
-		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title="go to top of menu" > ❦ </h1>
-
-	</nav>
-
-
-	<div>
-
-		<button id="butHamburger" onclick=MNU.toggleNavLeft(); title="click here to hide this menu"> slide &#9776; </button>
-
-	</div>
-
-
-	<nav id="navPopUp" >
-
-		<div id="divPopUpData" ></div>
-
-		<div id="divMessage" ></div>
-
-	</nav>
-
-	<nav id="viewSrcButton" >
-
-		<a id=aViewSource target=_blank >View source</a>
-
-	</nav>
-
-	<div id="divContainer" >
-
-		<div id="divContents" ></div>
-
-	</div>
-
-<script>
-
+MNU.footerPopupUrl	= "https://pushme-pullyou.github.io/";
+MNU.footerTarget = "target=_blank";
+MNU.footerIssues = "https://github.com/pushme-pullyou.github.io/issues";
 
 
 init();
@@ -195,32 +165,51 @@ init();
 
 function init() {
 
-	FGA.divContents = divContents;
+	if ( /(iPad|iPhone|iPod)/g.test( navigator.userAgent ) ) { /* I hate having to add this */
+
+		divContents.style.width = getComputedStyle( divContents ).width;
+		divContents.style.height = getComputedStyle( divContents ).height;
+		divContents.setAttribute( 'scrolling', 'no' );
+
+	}
+
+	THMdivMenuThemeSelect.innerHTML = THM.getMenuThemeSelect();
+	THM.init();
 
 	MNUdivHeader.innerHTML = MNU.getNavHeader();
 
-	//SFM.getMarkdownFileContents("prototypes.md",SFMsecPrototypes);
-
-	FGAsecMenuRepoFilesFolders.innerHTML = FGA.getMenuFilesGithubApi();
-
-	GATsecGithubAccessToken.innerHTML = GAT.getMenuGitHubAccessToken();
-
-	FOBsecFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic( divContents, divPopUpData );
-
-	THMsecMenuThemeSelect.innerHTML = THM.getMenuThemeSelect();
-
-	//TMPsecMenuTemplate.innerHTML = TMP.getMenuTemplate();
-
-	MNUdivFooter.innerHTML = MNU.getNavFooter(); // not essential
-
-	THM.init();
+	FGAdivMenuRepoFilesFolders.innerHTML = FGA.getMenuFilesGithubApi();
 
 	FGA.getFiles();
 
-	FOB.onHashChange();
+	GATdivGithubAccessToken.innerHTML = GAT.getMenuGitHubAccessToken();
+
+	FOBdivFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic();
+
+	FOBdivFileSaveBasic.innerHTML = FOB.getMenuFileSaveBasic();
+
+	TMPdivTemplate.innerHTML = TMP.getMenuTemplate();
+
+	//MNUdivFooter.innerHTML = MNU.getNavFooter();
+
+	MNUdivFooterPopup.innerHTML = MNU.getNavFooterPopup();
+
+	if ( !location.hash ) { location.hash=FOB.urlDefaultFile; } else { FOB.onHashChange(); }
+
+	aViewSource.style.display = "block";
+	aViewSource.href = MNU.urlSourceCode;
 
 }
 
+
+
+function toggleNavPanel() {
+
+	expandButton.classList.toggle( 'collapsed' );
+	navPanel.classList.toggle( 'collapsed' );
+	main.classList.toggle( 'collapsed' );
+
+}
 
 </script>
 </body>
