--- a/index-2019-06-19.html
+++ b/index-2019-06-19.html
@@ -2,20 +2,20 @@
 <html lang = "en" >
 <head>
 
-<meta charset = "utf-8" >
+<meta charset = "utf-8">
 <meta name = "copyright" content ="PushMe-PullYou authors" >
-<meta name = "date" content = "2019-06-19" >
-<meta name = "description" content = "Basic TooToo HTML template" >
+<meta name = "date" content = "2019-06-08" >
+<meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "version" content = "0.14.02-0" >
+<meta name = "version" content = "0.14.1-5" >
 <meta name = "viewport" content = "width=device-width, initial-scale=1" >
 
-<title>TooToo</title>
+<title>pushMe-pullYou</title>
 
-<link rel = "canonical" href = "https://pushme-pullyou.github.io" >
-<link rel = "license" href = "https://creativecommons.org/licenses/by/4.0/" >
+<link rel = "canonical" href = "https://pushme-pullyou.github.io" />
+<link rel = "license" href = "https://creativecommons.org/licenses/by/4.0/">
 <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Inconsolata"  >
-<link rel = "stylesheet" href = "https://pushme-pullyou.github.io/tootoo14/js-14-02/style.css" >
+<link rel = "stylesheet" href = "https://pushme-pullyou.github.io/tootoo14/js-14-1/style.css" >
 
 </head>
 
@@ -25,19 +25,18 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" ></script>
 
 <!-- menus generally -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/mnu-menu/mnu-menu.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/pop-popup/pop-popup.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/gat-github-access-token/gat-github-access-token.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/mnu-menu/mnu-menu.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/gat-github-access-token/gat-github-access-token.js" ></script>
 
 <!-- File menu panel -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/fga-files-github-api/fga-files-github-api.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/fob-file-open-basic/fob-file-open-basic.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/fga-files-github-api/fga-files-github-api.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/fob-file-open-basic/fob-file-open-basic.js" ></script>
 
 <!-- Edit Menu -->
 
 <!-- Settings menu -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/thm-theme/thm-theme.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/tmp-template/tmp-template.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/thm-theme/thm-theme.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-1/tmp-template/tmp-template.js" ></script>
 
 	<button id="expandButton" onclick="toggleNavPanel();" >☰</button>
 
@@ -51,21 +50,18 @@
 
 			</header>
 
-			<details open>
-
-				<summary class="sumMenuTitle" >GitHub folders & files</summary>
-
-				<div id="FGAdivMenuRepoFilesFolders" ></div>
-
-				<div id="GATdivGithubAccessToken" ></div>
-
-			</details>
 
 			<details open >
 
 				<summary class="sumMenuTitle" >File menu</summary>
 
+				<p>See also <a href="https://pushme-pullyou.github.io/tootoo14" >tooToo14</a></p>
+
 				<div id=SFMsecPrototypes ></div>
+
+				<div id="FGAdivMenuRepoFilesFolders" ></div>
+
+				<div id="GATdivGithubAccessToken" ></div>
 
 				<div id=FOBdivFileOpenBasic ></div>
 
@@ -113,7 +109,7 @@
 
 		<section class="secContent" >
 
-			<div id="POPdivPopup" ></div>
+			<div id="MNUdivPopup" ></div>
 
 		</section>
 
@@ -129,8 +125,8 @@
 
 <script>
 
-THM.themeUrlStorage = 'tootoo14ThemeUrlTemplate'; // set for each instance in HTML file
-THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-02/style.css";
+THM.themeUrlStorage = 'pushMePullYouThemeUrl'; // set for each instance in HTML file
+THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-1/style.css";
 
 //FOB.urlDefaultFile = "README.md";
 
@@ -139,23 +135,21 @@ FGA.branch = '/master/';
 FGA.user = 'pushme-pullyou';
 FGA.repo = 'pushme-pullyou.github.io';
 FGA.pathRepo = '';
-FGA.urlGitHubPage = "";
-//FGA.urlGitHubPage = "https://pushme-pullyou.github.io/";
-
-FGA.ignoreFolders = [ "archive","data",".github" ];
+FGA.urlGitHubPage = "../../";
+FGA.urlGitHubPage = "https://pushme-pullyou.github.io/";
 
 // For main menu header
-//MNU.description = `Very simple JavaScript files to help you explore and build new tools on <a href="https://github.com" target="_blank">GitHub</a>.`;
+MNU.description = `Very simple JavaScript files to help you explore and build new tools on <a href="https://github.com" target="_blank">GitHub</a>.`;
 
-MNU.urlSourceCode = "https://github.com/pushme-pullyou/tootoo14/";
+MNU.urlSourceCode = "https://github.com/pushme-pullyou/";
 
-MNU.homeText  = "pushMe-pullYou";
-MNU.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-MNU.homeUrl   = "https://pushme-pullyou.github.io";
+MNU.homeText  = ""; //"pushMe-pullYou";
+MNU.homeTitle = ""; //"Very simple JavaScript files to help you explore and build new tools on GitHub.";
+MNU.homeUrl   = ""; //"https://pushme-pullyou.github.io";
 
-MNU.repoText  = "TooToo14";
-MNU.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-MNU.repoUrl   = "https://pushme-pullyou.github.io/tootoo14";
+MNU.repoText  = ""; //"TooToo14";
+MNU.repoTitle = ""; //"Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
+MNU.repoUrl   = ""; //"https://pushme-pullyou.github.io/tootoo14";
 
 MNU.appText  = ""; // "CMS";
 MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
@@ -163,7 +157,7 @@ MNU.appUrl   = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburg
 
 MNU.footerPopupUrl	= "https://pushme-pullyou.github.io/";
 MNU.footerTarget = "target=_blank";
-MNU.footerIssues = "https://github.com/pushme-pullyou.github.io/tootoo14/issues";
+MNU.footerIssues = "https://github.com/pushme-pullyou.github.io/issues";
 
 
 init();
@@ -186,7 +180,7 @@ function init() {
 
 	FGAdivMenuRepoFilesFolders.innerHTML = FGA.getMenuFilesGithubApi();
 
-	FGA.getFiles(); // move to js
+	FGA.getFiles();
 
 	GATdivGithubAccessToken.innerHTML = GAT.getMenuGitHubAccessToken();
 
