--- a/tootoo-more2/basic-html.html
+++ b/tootoo-more2/basic-html.html
@@ -7,7 +7,7 @@
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2019-05-25" >
 <meta name = "version" content = "0.0.0" >
-<title>basic-html</title>
+<title></title>
 <style>
 
 	* { box-sizing: border-box; }
