--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 
 <meta charset = "utf-8" >
 <meta name = "copyright" content ="PushMe-PullYou authors" >
-<meta name = "date" content = "2019-06-19" >
-<meta name = "description" content = "Basic TooToo HTML template" >
+<meta name = "date" content = "2019-08-04" >
+<meta name = "description" content = "Very simple JavaScript files to help you explore and build new tools on GitHub." >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "version" content = "0.14.02-0" >
+<meta name = "version" content = "0.14.06" >
 <meta name = "viewport" content = "width=device-width, initial-scale=1" >
 
-<title>TooToo</title>
+<title>pushMe-pullYou</title>
+
+<base href = "" >
 
 <link rel = "canonical" href = "https://pushme-pullyou.github.io" >
 <link rel = "license" href = "https://creativecommons.org/licenses/by/4.0/" >
-<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Inconsolata"  >
-<link rel = "stylesheet" href = "https://pushme-pullyou.github.io/tootoo14/js-14-02/style.css" >
+<link rel = "license" href = "https://opensource.org/licenses/MIT" >
+<link rel = "stylesheet" href = "https://pushme-pullyou.github.io/tootoo14/js-14-06/style.css" >
+
 
 </head>
 
@@ -24,20 +27,24 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js" ></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" ></script>
 
-<!-- menus generally -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/mnu-menu/mnu-menu.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/pop-popup/pop-popup.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/gat-github-access-token/gat-github-access-token.js" ></script>
+<!-- Menus generally -->
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/mnu-menu/mnu-menu.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/pop-popup/pop-popup.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/gat-github-access-token/gat-github-access-token.js" ></script>
 
 <!-- File menu panel -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/fga-files-github-api/fga-files-github-api.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/fob-file-open-basic/fob-file-open-basic.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/fga-files-github-api/fga-files-github-api.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/fob-file-open-basic/fob-file-open-basic.js" ></script>
 
 <!-- Edit Menu -->
 
+
 <!-- Settings menu -->
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/thm-theme/thm-theme.js" ></script>
-<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-02/tmp-template/tmp-template.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/thm-theme/thm-theme.js" ></script>
+<script src = "https://pushme-pullyou.github.io/tootoo14/js-14-06/tmp-template/tmp-template.js" ></script>
+
+<script src = "" ></script>
+
 
 	<button id="expandButton" onclick="toggleNavPanel();" >☰</button>
 
@@ -45,11 +52,17 @@
 
 		<section class="secContent" >
 
-			<header>
+			<details open>
 
-				<div id="MNUdivHeader" ></div>
+			<summary class="sumMenuTitle" >Menu bar header</summary>
 
-			</header>
+				<header>
+
+					<div id="MNUdivHeader" ></div>
+
+				</header>
+
+			</details>
 
 			<details open>
 
@@ -61,11 +74,9 @@
 
 			</details>
 
-			<details open >
+			<details>
 
 				<summary class="sumMenuTitle" >File menu</summary>
-
-				<div id=SFMsecPrototypes ></div>
 
 				<div id=FOBdivFileOpenBasic ></div>
 
@@ -87,9 +98,13 @@
 
 			<footer>
 
-				<div id="MNUdivFooter" ></div>
+				<details>
 
-				<div id="MNUdivFooterPopup" ></div>
+					<summary class=sumMenuTitle >Help menu</summary>
+
+					<div id="MNUdivFooterPopup" ></div>
+
+				</details>
 
 				<h1 onclick="navPanel.scrollTop=0;" style="cursor:pointer;text-align:center;" title="go to top of menu" >
 					❦
@@ -102,18 +117,32 @@
 	</nav>
 
 
-	<main id=main >
+	<main id="main" >
 
-		<div id=divContents ></div>
+		<div id="divContents" ></div>
 
 	</main>
 
 
-	<nav id="navPopup" hidden >
+	<nav id="navDragMove"  hidden >
 
-		<section class="secContent" >
+		<section id="secDragMove" >
 
-			<div id="POPdivPopup" ></div>
+			<div id=divDragMoveHeader >
+
+				<span title="Move and resize me" >&#x2766;</span>
+
+				<div style=float:right; >
+					<button id=butPopupClose onclick="POP.onClickClose(butPopupClose);" >
+						&times;
+					</button>
+				</div>
+
+			</div>
+
+			<div id="divDragMoveContent" ></div>
+
+			<div id="divDragMoveFooter" ></div>
 
 		</section>
 
@@ -122,48 +151,52 @@
 
 	<nav>
 
-		<a href="" id="aViewSource" target="_blank"; hidden >view source</a>
+		<a href="" id="aViewSource" target="_blank" >view source</a>
 
 	</nav>
 
 
 <script>
 
-THM.themeUrlStorage = 'tootoo14ThemeUrlTemplate'; // set for each instance in HTML file
-THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-02/style.css";
 
-//FOB.urlDefaultFile = "README.md";
+POP.version = MNU.version = document.head.querySelector( '[ name=version ]' ).content || "";
+POP.date = MNU.date = document.head.querySelector( '[ name=date ]' ).content || "";
 
+POP.popup = "https://pushme-pullyou.github.io/pages/popup.md";
+POP.license = "https://pushme-pullyou.github.io/pages/license.md";
+
+FOB.urlDefaultFile = "https://pushme-pullyou.github.io/README.md";
 
 FGA.branch = '/master/';
 FGA.user = 'pushme-pullyou';
 FGA.repo = 'pushme-pullyou.github.io';
 FGA.pathRepo = '';
-FGA.urlGitHubPage = "";
-//FGA.urlGitHubPage = "https://pushme-pullyou.github.io/";
 
-FGA.ignoreFolders = [ "archive","data",".github" ];
+//FGA.urlGitHubPage = "https://pushme-pullyou.github.io/";
+FGA.urlGitHubPage = "";
+
+THM.themeUrlStorage = 'pushme-pullyou-theme-url';
+THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-06/style.css";
 
 // For main menu header
-//MNU.description = `Very simple JavaScript files to help you explore and build new tools on <a href="https://github.com" target="_blank">GitHub</a>.`;
+MNU.urlSourceCode ="https://pushme-pullyou.github.io/";
 
-MNU.urlSourceCode = "https://github.com/pushme-pullyou/tootoo14/";
+MNU.homeText = "";
+MNU.homeTitle = "";
+MNU.homeUrl = "";
 
-MNU.homeText  = "pushMe-pullYou";
-MNU.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-MNU.homeUrl   = "https://pushme-pullyou.github.io";
+MNU.repoText= "";
+MNU.repoTitle="";
+MNU.repoUrl="";
 
-MNU.repoText  = "TooToo14";
-MNU.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-MNU.repoUrl   = "https://pushme-pullyou.github.io/tootoo14";
+MNU.appText= "";
+MNU.appTitle = "";
+MNU.appUrl = "";
 
-MNU.appText  = ""; // "CMS";
-MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-MNU.appUrl   = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+MNU.footerPopupUrl = "https://pushme-pullyou.github.io/";
+MNU.footerTarget = ""; //"target=_blank";
+MNU.footerIssues = "https://github.com/pushme-pullyou/tootoo14//issues";
 
-MNU.footerPopupUrl	= "https://pushme-pullyou.github.io/";
-MNU.footerTarget = "target=_blank";
-MNU.footerIssues = "https://github.com/pushme-pullyou.github.io/tootoo14/issues";
 
 
 init();
@@ -180,36 +213,44 @@ function init() {
 	}
 
 	THMdivMenuThemeSelect.innerHTML = THM.getMenuThemeSelect();
+
 	THM.init();
 
 	MNUdivHeader.innerHTML = MNU.getNavHeader();
 
 	FGAdivMenuRepoFilesFolders.innerHTML = FGA.getMenuFilesGithubApi();
 
-	FGA.getFiles(); // move to js
+	FGA.getFiles(); // move to js?
 
 	GATdivGithubAccessToken.innerHTML = GAT.getMenuGitHubAccessToken();
 
 	FOBdivFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic();
 
-	FOBdivFileSaveBasic.innerHTML = FOB.getMenuFileSaveBasic();
+	//FOBdivFileSaveBasic.innerHTML = FOB.getMenuFileSaveBasic();
 
 	TMPdivTemplate.innerHTML = TMP.getMenuTemplate();
 
-	//MNUdivFooter.innerHTML = MNU.getNavFooter();
-
 	MNUdivFooterPopup.innerHTML = MNU.getNavFooterPopup();
 
-	if ( !location.hash ) { location.hash=FOB.urlDefaultFile; } else { FOB.onHashChange(); }
+	POP.init();
 
-	aViewSource.style.display = "block";
+	//COR.init();
+
+	// let's go / FOB to load default and fire onload events
+	if ( !location.hash ) { location.hash = FOB.urlDefaultFile; } else { FOB.onHashChange(); }
+
 	aViewSource.href = MNU.urlSourceCode;
+
+	//POP.setPopupShowHide();
+	POP.popupId = butPopupClose;
+
+	if ( window.innerWidth < 640 || window.innerHeight < 640 ) { toggleNavPanel(); }
 
 }
 
 
 
-function toggleNavPanel() {
+function toggleNavPanel() {// move to COR??
 
 	expandButton.classList.toggle( 'collapsed' );
 	navPanel.classList.toggle( 'collapsed' );
