--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ THM.themeUrlStorage = 'pushme-pullyou-theme-url';
 THM.cssBasic = "https://pushme-pullyou.github.io/tootoo14/js-14-06/style.css";
 
 // For main menu header
-MNU.urlSourceCode ="https://pushme-pullyou.github.io/";
+MNU.urlSourceCode ="https://github.com/pushme-pullyou/pushme-pullyou.github.io";
 
 MNU.homeText = "";
 MNU.homeTitle = "";
